# LiquidSnow-archive

./: .gitignore  CMakeLists.txt  LiquidSnow.sln  README.md  petri-dish.txt  requirements.txt
.github/: BUILD.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dotnet-publish.yml  dotnet-test.yml  dotnet.yml
AbaClient/: AbaClient.csproj  ClientInitEventArgs.cs  IContext.cs  InitException.cs
AbaClient/Clients/: AbaClientBuilder.cs  AccessToken.cs  ArethaClient.cs  ClientBase.cs  (+1 more)
AbaCommon/: AbaCommon.csproj  IAbaUser.cs  IPackage.cs
AbaServer/: AbaHub.cs  AbaServer.csproj
Anubis/: Anubis.csproj  AnubisExtensions.cs  Black.cs  Class1.cs  IJector.cs  JectorBuilder.cs
Aretha/: AnubisSoul.cs  Aretha.cs  Aretha.csproj  EnigmaSoul.cs  ISoul.cs  Program.cs
Core/: BindableBase.cs  Core.cs  Core.csproj  Extensions.cs  Storage.cs
Enigma/: Classical.cs  Enigma.cs  Enigma.csproj  EnigmaContainer.cs  EnigmaFile.cs
Goro/: Converter.cs  Goro.csproj  Readme.md  ThemeManager.cs  styles.xaml
Lansique/: Act.cs  Lansique.csproj  Section.cs  Subsection.cs
Mercury/: Mercury.csproj  Server.cs
Mercury.Azure.Blobs/: ITransferAuthenticator.cs  Mercury.Azure.Blobs.csproj  Transfer.cs  TransferBuilder.cs  TransferManager.cs
Pluto/: Account.cs  Book.cs  Pluto.csproj  Transaction.cs
Sia/: Sia.csproj
docs/: Home.md
src/Phytensor.QuantumCrypt/: CMakeLists.txt  Phytensor.QuantumCrypt.c  Phytensor.QuantumCrypt.cpp  Phytensor.QuantumCrypt.h
src/QuantumCrypt/: CMakeLists.txt
(+783 files in other folders)
