# CMakeList.txt : CMake project for Phytensor.QuantumCrypt, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Phytensor.QuantumCrypt "Phytensor.QuantumCrypt.cpp" "Phytensor.QuantumCrypt.h")

# TODO: Add tests and install targets if needed.
