# CMakeList.txt : CMake project for Phytensor.QuantumCrypt, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
#add_library (Phytensor.QuantumCrypt "Phytensor.QuantumCrypt.c" "Phytensor.QuantumCrypt.h")
add_executable (Phytensor.QuantumCrypt "Phytensor.QuantumCrypt.c")

# TODO: Add tests and install targets if needed.
